# Aethel-Guage-Vacuum

./: .pre-commit-config.yaml  CONTRIBUTING.md  DISCOVERY.md  Dockerfile  LICENSE  README.md  REPO_MANIFEST.txt  THEORIES.md  aethel_master_conductor.py  app.py  bridge_manifold_to_hologram.py  celestial_compiler.py  config.json  dashboard_service.py  deploy_aethel_gauge.sh  glsl  holographic_compiler.py  index.html  install_dependencies.py  main.py  main_runtime_conductor.py  mkdocs.yml  optomechanical_bridge.py  pyproject.toml  requirements-dev.txt  run_comprehensive_ternary_simulation.py  run_scene_generation_pipeline.py  run_solid_state_compute.py  run_ternary_logic_benchmark.py  setup_and_test.sh  system_config.yaml  test_solid_state_fabric.py  theorem_prover.py  verify_stack.py  ​master_execution.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: format-trigger.txt
ai/: gnn_graph_generator.py  gnn_processor.py  hyperedge_calculus.py  neuromorphic_reservoir.py  non_linear_field_optimizer.py  toroidal_wyrd_mesh.py
binder/: environment.yml
controller/: gravitywell_3t_core.py
core/: acousto_optic_mixer.py  artificial_gravity_field.py  asset_injector.py  baryon_boson_entangler.py  celestial_mechanics.py  clock_generator.py  cort_engine.py  defect_monitor.py  edge_state_modulator.py  einstein_fresnel_engine.py  entourage_synergy_driver.py  evanescent_decoupler.py  fatecrystal_singularity_governor.py  harmonic_boundary_solver.py  holographic_matrix_conductor.py  ip_escrow_compliance.py  laser_stabilizer.py  metric_qubit_converter.py  neuromorphic_ml_node.py  (+31 more)
(+134 files in other folders)
