[tool.poetry]
name = "qvalidate"
version = "0.1.0"
description = "Quantum validation utilities (symbolic verifier scaffold)"
authors = ["mrlindzer3 <mr.lindzer3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
